WIP for new Deck formats
#130